added category and size filter to endpoint for getting measures
