# backend/src/main/java/ru/petflower/controller/responses/device/GetAllSpecificTypeMeasuresResponse.java
@@ -1,0 +1,8 @@
+package ru.petflower.controller.responses.device;
+
+import java.util.List;
+
+public record GetAllSpecificTypeMeasuresResponse(
+        List<GetSpecificTypeMeasureResponse> measures
+) {
+}
