# backend/src/main/java/ru/petflower/enums/MeasureType.java
@@ -1,0 +1,9 @@
+package ru.petflower.enums;
+
+public enum MeasureType {
+    TEMPERATURE,
+    HUMIDITY,
+    LIGHT,
+    MOISTURE,
+    BATTERY
+}
